; ModuleID = '/home/carl/AnghaBench/freebsd/sys/powerpc/powerpc/extr_altivec.c_save_vec_nodrop.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/powerpc/powerpc/extr_altivec.c_save_vec_nodrop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.thread = type { i32 }

@vecthread = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @save_vec_nodrop(%struct.thread* %0) #0 {
  %2 = alloca %struct.thread*, align 8
  %3 = alloca %struct.thread*, align 8
  store %struct.thread* %0, %struct.thread** %2, align 8
  %4 = load i32, i32* @vecthread, align 4
  %5 = call %struct.thread* @PCPU_GET(i32 %4)
  store %struct.thread* %5, %struct.thread** %3, align 8
  %6 = load %struct.thread*, %struct.thread** %2, align 8
  %7 = load %struct.thread*, %struct.thread** %3, align 8
  %8 = icmp ne %struct.thread* %6, %7
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  br label %13

10:                                               ; preds = %1
  %11 = load %struct.thread*, %struct.thread** %2, align 8
  %12 = call i32 @save_vec_int(%struct.thread* %11)
  br label %13

13:                                               ; preds = %10, %9
  ret void
}

declare dso_local %struct.thread* @PCPU_GET(i32) #1

declare dso_local i32 @save_vec_int(%struct.thread*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
